add route: update vehicle
